trine_stage1.h


/* Lens weights for comparison (same semantics as trine_lens_t) */
typedef struct {
    float weights[TRINE_S1_CHAINS];
} trine_s1_lens_t;