bindings/rust/src/ffi.rs


    /// From pre-computed Stage-1 trits: projection -> cascade.
    /// Returns 0 on success, -1 on error.
    pub fn trine_s2_encode_from_trits(
        model: *const trine_s2_model_t,
        stage1: *const u8,
        depth: u32,
        out: *mut u8,
    ) -> c_int;

    // ── Comparison ──────────────────────────────────────────────────

    /// Compare two Stage-2 embeddings using a lens.
    /// lens may be NULL (uniform weights) or a trine_s1_lens_t pointer.
    /// Returns similarity in [0.0, 1.0], or -1.0 on error.
    pub fn trine_s2_compare(
        a: *const u8,
        b: *const u8,
        lens: *const c_void,
    ) -> c_float;

    // ── Gate-Aware Comparison (Phase B1) ───────────────────────────

    /// Compare using only channels with active diagonal gates.
    /// Skips uninformative channels for noise-reduced cosine similarity.
    pub fn trine_s2_compare_gated(
        model: *const trine_s2_model_t,
        a: *const u8,
        b: *const u8,
    ) -> c_float;

    // ── Per-Chain Blend Comparison (Phase B2) ───────────────────

    /// Blend S1 and S2 per-chain similarities with independent alpha weights.
    pub fn trine_s2_compare_chain_blend(
        s1_a: *const u8,
        s1_b: *const u8,
        s2_a: *const u8,
        s2_b: *const u8,
        alpha: *const c_float,
    ) -> c_float;

    // ── Adaptive Blend (v1.0.3) ────────────────────────────────────

    /// Set per-S1-bucket alpha values for adaptive blending.
    /// buckets[10]: alpha for S1 similarity in [0.0-0.1), [0.1-0.2), ..., [0.9-1.0].
    /// Pass NULL to disable adaptive blending.
    pub fn trine_s2_set_adaptive_alpha(
        model: *mut trine_s2_model_t,
        buckets: *const c_float,
    );

    /// Adaptive blend: alpha selected based on S1 similarity bucket.
    /// Computes S1 similarity, looks up alpha, then blends S1 and S2 scores.
    /// Returns 0.0 if adaptive_alpha is not set or on error.
    pub fn trine_s2_compare_adaptive_blend(
        model: *const trine_s2_model_t,
        s1_a: *const u8,
        s1_b: *const u8,
        s2_a: *const u8,
        s2_b: *const u8,
    ) -> c_float;

    // ── Block-Diagonal Introspection (v1.0.3) ───────────────────

    /// Get a read-only pointer to the block-diagonal projection weights.
    /// Returns NULL if model is NULL or not in block-diagonal mode.
    /// Layout: K * 4 * 60 * 60 bytes = 43,200 bytes total.
    pub fn trine_s2_get_block_projection(
        model: *const trine_s2_model_t,
    ) -> *const u8;

    // ── Introspection ───────────────────────────────────────────────

    /// Query model parameters. Returns 0 on success, -1 on null model.
    pub fn trine_s2_info(
        model: *const trine_s2_model_t,
        info: *mut trine_s2_info_t,
    ) -> c_int;

    /// Set projection mode (0=sign, 1=diagonal, 2=sparse).
    pub fn trine_s2_set_projection_mode(model: *mut trine_s2_model_t, mode: c_int);

    /// Get projection mode. Returns -1 on null model.
    pub fn trine_s2_get_projection_mode(model: *const trine_s2_model_t) -> c_int;

    /// Enable/disable stacked depth (re-apply projection instead of cascade).
    pub fn trine_s2_set_stacked_depth(model: *mut trine_s2_model_t, enable: c_int);

    /// Get stacked depth flag. Returns 0 if disabled or null model.
    pub fn trine_s2_get_stacked_depth(model: *const trine_s2_model_t) -> c_int;

    /// Get cascade cell count. Returns 0 on null model.
    pub fn trine_s2_get_cascade_cells(model: *const trine_s2_model_t) -> u32;

    /// Get default depth. Returns 0 on null model.
    pub fn trine_s2_get_default_depth(model: *const trine_s2_model_t) -> u32;

    /// Get read-only pointer to projection weights.
    pub fn trine_s2_get_projection(model: *const trine_s2_model_t) -> *const c_void;

    // ── Persistence ─────────────────────────────────────────────────

    /// Save a trained Stage-2 model to a .trine2 file.
    /// Returns 0 on success, -1 on error.
    pub fn trine_s2_save(
        model: *const trine_s2_model_t,
        path: *const c_char,
        config: *const trine_s2_save_config_t,
    ) -> c_int;

    /// Load a Stage-2 model from a .trine2 file.
    /// Returns NULL on error.
    pub fn trine_s2_load(path: *const c_char) -> *mut trine_s2_model_t;

    /// Validate a .trine2 file without loading it.
    /// Returns 0 if valid, -1 on error.
    pub fn trine_s2_validate(path: *const c_char) -> c_int;

    // ── Hebbian Training ────────────────────────────────────────────

    /// Create training state. Returns NULL on failure.
    pub fn trine_hebbian_create(
        config: *const trine_hebbian_config_t,
    ) -> *mut trine_hebbian_state_t;

    /// Free training state. Safe to call with NULL.
    pub fn trine_hebbian_free(state: *mut trine_hebbian_state_t);

    /// Observe a single training pair (raw trits).
    pub fn trine_hebbian_observe(
        state: *mut trine_hebbian_state_t,
        a: *const u8,
        b: *const u8,
        similarity: c_float,
    );

    /// Observe a pair from text (encode + compare + accumulate).
    pub fn trine_hebbian_observe_text(
        state: *mut trine_hebbian_state_t,
        text_a: *const c_char,
        len_a: usize,
        text_b: *const c_char,
        len_b: usize,
    );

    /// Train from a JSONL file. Returns pairs processed, or -1 on error.
    pub fn trine_hebbian_train_file(
        state: *mut trine_hebbian_state_t,
        path: *const c_char,
        epochs: u32,
    ) -> i64;

    /// Freeze current state to a Stage-2 model.
    /// Returns NULL on failure.
    pub fn trine_hebbian_freeze(
        state: *const trine_hebbian_state_t,
    ) -> *mut trine_s2_model_t;

    /// Get training metrics. Returns 0 on success.
    pub fn trine_hebbian_metrics(
        state: *const trine_hebbian_state_t,
        out: *mut trine_hebbian_metrics_t,
    ) -> c_int;

    /// Reset accumulators (start fresh, keep config).
    pub fn trine_hebbian_reset(state: *mut trine_hebbian_state_t);

    /// Update similarity threshold between epochs (threshold schedule).
    pub fn trine_hebbian_set_threshold(state: *mut trine_hebbian_state_t, threshold: c_float);
}
